Bug 1581427: Define UniqueProfilerBacktrace and profiler_get_backtrace() to be no-ops on a build without profiling. r=njn

Differential Revision: https://phabricator.services.mozilla.com/D46090